--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Setup SSH
+      uses: MrSquaare/ssh-setup-action@v1
+      with:
+          host: github.com
+          private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    
+    - name: Clone repository
+      run: git clone git@github.com:CoolBank/wallet_android.git
+#     - uses: actions/checkout@v3
+#       with:
+#         repository: CoolBank/wallet_android
+    
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
