--- a/.github/workflows/appstore.yml
+++ b/.github/workflows/appstore.yml
@@ -18,7 +18,7 @@ jobs:
         
     - name: Checkout main-store
       run: |
-          git checkout main-store
+          git checkout -b main-store
           
     - name: set up JDK 11
       uses: actions/setup-java@v3
