--- a/.github/workflows/appstore.yml
+++ b/.github/workflows/appstore.yml
@@ -18,6 +18,7 @@ jobs:
         
     - name: Checkout main-store
       run: |
+          git pull
           git checkout -b main-store origin/main-store
           
     - name: set up JDK 11
