--- a/.github/workflows/appstore.yml
+++ b/.github/workflows/appstore.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Checkout main-store
       run: |
           git pull
-          git checkout -b main-store origin/main-store
+          git checkout -b main-store-google origin/main-store-google
           
     - name: set up JDK 11
       uses: actions/setup-java@v3
@@ -56,4 +56,7 @@ jobs:
           packageName: com.coinhub.wallet
           releaseFiles: app/build/outputs/apk/appstore/release/app-appstore-release.apk 
           track: production
-          status: draft
+          status: completed
+          inAppUpdatePriority: 2
+          userFraction: 1!
+          whatsNewDirectory: releaseNotes/
