--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,10 +38,10 @@ jobs:
         distribution: 'temurin'
         cache: gradle
     
-    - name: Config ssh
-      env: 
-        RSA_KEY: ${{ secrets.RSA_KEY }}
-      run: bash ${GITHUB_WORKSPACE}/.github/scripts/ssh_config.sh 
+#     - name: Config ssh
+#       env: 
+#         RSA_KEY: ${{ secrets.RSA_KEY }}
+#       run: bash ${GITHUB_WORKSPACE}/.github/scripts/ssh_config.sh 
     
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
@@ -62,13 +62,13 @@ jobs:
           name: app
           path: app/build/outputs/apk/official/release/app-official-release.apk 
           
-    - uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-    - name: Upload to S3
-      run: |
-        bash ${GITHUB_WORKSPACE}/.github/scripts/s3_upload.sh
-      env:
-        S3_APP_BUCKET: ${{ secrets.S3_APP_BUCKET }}
+#     - uses: aws-actions/configure-aws-credentials@v1
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: ${{ secrets.AWS_REGION }}
+#     - name: Upload to S3
+#       run: |
+#         bash ${GITHUB_WORKSPACE}/.github/scripts/s3_upload.sh
+#       env:
+#         S3_APP_BUCKET: ${{ secrets.S3_APP_BUCKET }}
